algine en template with current readme

--- a/languages/01-en.md
+++ b/languages/01-en.md
@@ -11,8 +11,8 @@ Profiles are generated from easily editable `.json` files. Check out `providers`
 Check out [encrypted-dns over TOR](https://github.com/alecmuffett/dohot) if you need more privacy. Known issues (we can't fix them, maybe Apple can):
 
 - eDNS gets disabled: [Little Snitch & Lulu](https://github.com/paulmillr/encrypted-dns/issues/13), [VPN](https://github.com/paulmillr/encrypted-dns/issues/18)
-- Some traffic is exempt from eDNS: [Terminal / App Store](https://github.com/paulmillr/encrypted-dns/issues/22), [Chrome](https://github.com/paulmillr/encrypted-dns/issues/19)
-- Starting from iOS & iPadOS 15.5, [Wi-Fi captive portals](https://en.wikipedia.org/wiki/Captive_portal) in cafes, hotels, airports are exempted by Apple from eDNS rules; to simplify authentication. This is good news.
+- Some traffic is exempt from eDNS: [Terminal / App Store](https://github.com/paulmillr/encrypted-dns/issues/22), [Chrome](https://github.com/paulmillr/encrypted-dns/issues/19) - this is bad
+- [Wi-Fi captive portals](https://en.wikipedia.org/wiki/Captive_portal) in cafes, hotels, airports are exempted by Apple from eDNS rules; to simplify authentication - this is good
 - TLS DNS is blocked more often by ISPs than HTTPS, because TLS uses non-standard port 853, which is easy to filter out.
   See [Google's article](https://security.googleblog.com/2022/07/dns-over-http3-in-android.html)
 
@@ -68,7 +68,9 @@ You can optionally exclude some trusted Wi-Fi networks where you don't want to u
 
 ## Contributing a new profile
 
-Profiles are basically text files. Copy an existing one and change its UUID, make sure you update README with new profile's info.
+Profiles are generated from easily editable `.json` files. Check out `providers` directory to add or edit a new profile.
+
+Copy an existing one and change its UUID, make sure you update README with new profile's info.
 
 In addition to generating online, there are many other ways to generate a random UUID:
 
